# codegen

./: CMakeLists.txt  DEPENDENCIES  Makefile  README.markdown  config.cmake.in  package-lock.json  package.json  vendorpull.mask
.github/workflows/: ci.yml
cmake/: FindCore.cmake
contrib/: CMakeLists.txt  typescript.cc
doxygen/: Doxyfile.in
src/generator/: common.cc  typescript.cc
src/generator/include/sourcemeta/codegen/: generator.h  generator_typescript.h
src/ir/: CMakeLists.txt  ir.cc  ir_default_compiler.h  ir_group.cc  ir_handlers.h
src/ir/include/sourcemeta/codegen/: ir.h  ir_error.h  ir_group.h
src/typescript/: CMakeLists.txt  typescript.cc
src/typescript/include/sourcemeta/codegen/: typescript.h
test/e2e/typescript/: CMakeLists.txt  e2e.cc
test/e2e/typescript/2020-12/all_type_values/: expected.d.ts
test/e2e/typescript/2020-12/anchor_refs/: expected.d.ts
test/e2e/typescript/2020-12/bundled_schema/: expected.d.ts  schema.json  test.ts
test/e2e/typescript/2020-12/complex_nested_object/: expected.d.ts
test/e2e/typescript/2020-12/const_keyword/: expected.d.ts
test/e2e/typescript/2020-12/deeply_nested_refs/: expected.d.ts
test/e2e/typescript/2020-12/implicit_types_and_reused_refs/: expected.d.ts
test/e2e/typescript/2020-12/object_with_additional_properties/: expected.d.ts
test/e2e/typescript/2020-12/object_with_optional_string_property/: expected.d.ts
test/e2e/typescript/2020-12/oneof_union/: expected.d.ts
test/e2e/typescript/2020-12/vocabulary_ignored/: expected.d.ts
test/generator/: CMakeLists.txt  generator_to_pascal_case_test.cc  generator_typescript_test.cc
test/ir/: CMakeLists.txt  ir_2020_12_test.cc  ir_group_test.cc  ir_test.cc  ir_test_utils.h
test/packaging/find_package/: CMakeLists.txt  hello.cc
test/typescript/: CMakeLists.txt  e2e.cc  typescript_test.cc
